# spotiviewbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yml  pyproject.toml
.github/workflows/: lint_and_build.yaml
src/: main.py
src/spotify/: __init__.py  generator.py  inline.py  text.py
