[project]
name = "spotishare"
version = "0.1.0"
description = "Telegram bot to share tracks from spotify with preview"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "spotipy>=2.25.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]
